# pynote

./: .env.example  .gitignore  LICENSE  README.md  env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  run.bat
app/: config.py  main.py
app/providers/: __init__.py  google.py  mocks.py
app/ui/: columns.py  panels_action.py  panels_content.py  panels_context.py
app/util/: threads.py
apps/note/api/: .env.example  README.md  pyproject.toml  run.bat
apps/note/api/app/: db.py  initserver.py  main.py
apps/note/api/app/service/: github_service.py
apps/note/ui/: .env.example  README.md  index.html  package.json  run.bat  vite.config.js
apps/note/ui/src/: App.jsx
apps/note/ui/src/api/: api.js
apps/note/ui/src/components/: Navbar.css  Navbar.jsx  github.css  github.jsx  tistory.css  tistory.jsx  youtube.css  youtube.jsx
apps/note/ui/src/pages/: dashboard.css  dashboard.jsx  github-multi.css  github-multi.jsx  github.css  github.jsx
docs/: dev-guide.md
